fixed dropdown overlap

--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,54 @@
 * {
-    outline: solid 1px green;
-    
+outline: solid 1px green;
 }
 
 body {
-    height: 50vh;
-    background-color: gray;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #252525;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 8fr 1fr;
+    grid-template-areas: 
+    "header"
+    "main"
+    "footer";
 }
 
 header {
+    grid-area: header;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
+    overflow-y: visible;
 }
 
 #menu-container {
     display:flex;
     justify-content: flex-start;
     align-items: center;
-    margin: 0;
-    padding: 0;
-    background-color: lightslategray;
+    background-color: #d5d5d3;
 }
 
 #logo-container {
     display:flex;
     justify-content: flex-start;
     align-items: center;
-    margin: 0;
-    padding: 0;
-    background-color: lightgreen;
+    background-color: #d5d5d3;
 }
+
 
 .logo{
     padding: 0rem 1rem 0rem 1rem;
+    background-color: #fdd947;
 }
 
 #nav-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: lightpink;
+    background-color: #d5d5d3;
 }
 
 nav {
@@ -62,10 +70,20 @@ nav a, #menu-button {
     display: none;
 }
 
+main {
+    grid-area: main;
+    background-color: #444444;
+}
+
+footer {
+    grid-area: footer;
+    background-color: #d5d5d3;;
+}
 
 @media screen and (max-width: 800px) {
     
     header {
+
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
@@ -80,6 +98,10 @@ nav a, #menu-button {
 
     #nav-container {
         grid-area: nav;
+        position: absolute;
+        top: 5.034rem;
+        z-index: 1;
+        width: 100%;
         display: none;
         justify-content: flex-start;
         align-items: center;
